static site generating, need colors

--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About - InterVolz</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>InterVolz About</title>
+    <link rel="stylesheet" href="/css/main.css">
     <!-- Add any head elements like CSS links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,9 @@
         </div>
     </header>
     <main>
+        <section>
         {{{content}}} <!-- This is where the Markdown content will be injected -->
+        </section>
     </main>
     <footer>
         <!-- Your site's footer content -->
