--- a/templates/homepage.hbs
+++ b/templates/homepage.hbs
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>InterVolz Homepage</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/homepage.css">
 
         <!-- Add any head elements like CSS links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
