--- a/templates/tag.hbs
+++ b/templates/tag.hbs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>{{{title}}}</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:wght@900&family=Rochester&family=Saira+Stencil+One&display=swap" rel="stylesheet">
@@ -20,7 +21,7 @@
             {{#each articles}}
              <li>
                     <span class="date">{{date}}</span>
-                    <a href="/{{url}}.html">{{title}}</a>
+                    <a href="/{{url}}">{{title}}</a>
             </li>
 
 
