--- a/src/css/archive.css
+++ b/src/css/archive.css
@@ -1,4 +1,3 @@
-
 .year-section {
     margin-bottom: 30px;
 }
@@ -15,18 +14,17 @@
 }
 
 .article-list li {
-    padding: 10px 0;
-    border-bottom: 1px solid #eaeaea;
+    margin-bottom: 40px;
+    background-color: #222;
+    border-radius: 5px;
+    margin: 10px auto 0;
+    padding: 14px;
 }
 
 .article-list li:last-child {
     border-bottom: none;
 }
 
-.article-list .date {
-    font-size: 0.85em;
-    color: #666;
-}
 
 .article-list .tags {
     margin-top: 5px;
@@ -34,10 +32,58 @@
 
 .article-list .tags a {
     display: inline-block;
-    color: #333;
+    color: #555;
     padding: 3px 10px;
     text-decoration: none;
     margin-right: 5px;
     font-size: 0.85em;
     border-radius: 3px;
+}
+
+div.article_box {
+    display: flex;
+    justify-content: space-between;
+}
+
+div.title {
+    color: #888;
+    font-size: larger;
+    text-decoration: none;
+    cursor: auto;
+}
+
+
+li[data-href]:hover .article_box .title,
+li[data-href]:hover .article_box .date {
+    /* Example styles to indicate clickable items */
+    color: #007bff;
+    /* Change color */
+    text-decoration: underline;
+    /* Add underline */
+}
+
+/* Optional: Change cursor to pointer for the entire li element */
+li[data-href] {
+    cursor: pointer;
+}
+
+/* Ensure cursor is default for links inside li */
+li[data-href] a {
+    cursor: pointer;
+}
+
+ul>li>a:link {
+    text-decoration: none;
+}
+
+ul>li>a:visited {
+    text-decoration: none;
+}
+
+ul>li>a:hover {
+    text-decoration: none;
+}
+
+ul>li>a:active {
+    text-decoration: none;
 }
