--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,12 +1,19 @@
 /* More CSS styles as needed */
 body {
     font-family: 'Roboto Mono', monospace;
-    color: #666;
+    color: #888;
     background-color: #111013;
     line-height: 1.6;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    color: #999;
 }
 
 main>section {
