avoiding single quote problems with verbosity

--- a/templates/homepage.hbs
+++ b/templates/homepage.hbs
@@ -20,7 +20,7 @@
         <h1 class="title">InterVolz</h1>
         <div class="social-links">
             <!-- Social media links -->
-            <a href="#">Github</a>
+            <a href="https://github.com/InterVolz">Github</a>
             <!-- <a href="#">Twitter</a> -->
             <!-- <a href="#">Stack Overflow</a> -->
         </div>
