--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,37 +1,84 @@
-/* More CSS styles as needed */
+/* Global Styles */
+html,
 body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto Mono', monospace;
-    color: #888;
     background-color: #111013;
+    color: #888;
     line-height: 1.6;
+}
+
+/* Header Styles */
+header {
+    height: 3em;
+    line-height: 3em;
+    text-align: center;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 800px;
+    width: 100%;
+}
+
+/* Main Content Area Styles */
+.content {
+    flex: 1;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
 
-h1,
+/* Footer Styles */
+footer {
+    height: 1.5em;
+    line-height: 1.5em;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.profile {
+    text-align: center;
+    font-size: larger;
+}
+
+.profile>h1 {
+    font-size: 3em;
+    line-height: 1;
+}
+
+/* Heading Styles */
+h1 {
+    color: white;
+}
+
 h2,
 h3,
 h4 {
     color: #999;
 }
 
+/* Section Styles */
 main>section {
     max-width: 680px;
-    margin: 60px auto 0;
+    margin: 20px auto 0;
 }
 
-header,
-footer {
-    text-align: center;
-    padding: 20px 0;
-}
-
+/* Header Title Style */
 header .title {
     font-size: 4.2em;
     margin: 0;
 }
 
+/* Social Links Styles */
 header .social-links {
     margin-top: 10px;
 }
