--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,20 +24,11 @@ header {
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 800px;
     width: 100%;
 }
 
-nav a:first-child {
-    margin-left: 20px;
-    /* Adjust the value as needed */
-}
-
-nav a:last-child {
-    margin-right: 20px;
-    /* Adjust the value as needed */
-}
 
 /* Main Content Area Styles */
 .content {
