higher order python

--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -45,9 +45,9 @@
     </main>
     <footer>
         <!-- Your site's footer content -->
-
+        
         {{#each Tags}}
-            <a href="/tags/{{this}}/">#{{this}}</a>
+            <a href="/tags/{{this}}/">{{this}}</a>
         {{/each}}
     </footer>
 </body>
